incoporating error correction